--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 }
 
 .services {
-  background-image: url('../public/images/img-home.jpg');
+  background-image: url('images/img-home.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -30,7 +30,7 @@
 }
 
 .products {
-  background-image: url('../public/images/img-5.jpg');
+  background-image: url('images/img-1.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -39,7 +39,7 @@
 }
 
 .sign-up {
-  background-image: url('../public/images/img-8.jpg');
+  background-image: url('images/img-8.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
